chore: add browserslits

--- a/package.json
+++ b/package.json
@@ -75,5 +75,9 @@
       "hasSuggestions": true,
       "debug": false
     }
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
